fix Output fix titles

--- a/app/views/transactionInfo.scala.html
+++ b/app/views/transactionInfo.scala.html
@@ -196,7 +196,7 @@
                                             <th scope="row">
                                                 <div class="media align-items-center">
                                                     <div class="media-body">
-                                                        <span class="mb-0 text-sm">Transaction id</span>
+                                                        <span class="mb-0 text-sm">ID</span>
                                                     </div>
                                                 </div>
                                             </th>
@@ -208,7 +208,7 @@
                                             <th scope="row">
                                                 <div class="media align-items-center">
                                                     <div class="media-body">
-                                                        <span class="mb-0 text-sm">Transaction fee</span>
+                                                        <span class="mb-0 text-sm">fee</span>
                                                     </div>
                                                 </div>
                                             </th>
@@ -232,7 +232,7 @@
                                             <th scope="row">
                                                 <div class="media align-items-center">
                                                     <div class="media-body">
-                                                        <span class="mb-0 text-sm">Transaction timestamp</span>
+                                                        <span class="mb-0 text-sm">Timestamp</span>
                                                     </div>
                                                 </div>
                                             </th>
@@ -246,7 +246,7 @@
                                             <th scope="row">
                                                 <div class="media align-items-center">
                                                     <div class="media-body">
-                                                        <span class="mb-0 text-sm">Transaction defaultProofOpt</span>
+                                                        <span class="mb-0 text-sm">Proof</span>
                                                     </div>
                                                 </div>
                                             </th>
