--- a/app/views/content_main.scala.html
+++ b/app/views/content_main.scala.html
@@ -1,5 +1,6 @@
 @(content: Html)
 
+
 <html>
 
 <head>
@@ -9,18 +10,14 @@
     <meta name="author" content="Creative Tim">
     <title>Encry Explorer</title>
     <!-- Favicon -->
-    <link href="./assets/img/brand/favicon.png" rel="icon" type="image/png">
+    <link href="../assets/img/brand/favicon.png" rel="icon" type="image/png">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <!-- Icons -->
-    <link href="./assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
-    <link href="./assets/vendor/fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link href="../assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
+    <link href="../assets/vendor/fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
     <!-- Argon CSS -->
-    <link type="text/css" href="./assets/css/argon.css?v=1.0.0" rel="stylesheet">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    <!-- Roboto Webfont -->
-    <link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
-    <link type="text/css" href="./assets/css/search.css?v=1.0.0" rel="stylesheet">
+    <link type="text/css" href="../assets/css/argon.css?v=1.0.0" rel="stylesheet">
 </head>
 
 <body>
@@ -33,7 +30,7 @@
         </button>
         <!-- Brand -->
         <a class="navbar-brand pt-0" href="../">
-            <img src="./assets/img/brand/encry-logo.png" class="navbar-brand-img" alt="...">
+            <img src="../assets/img/brand/encry-logo.png" class="navbar-brand-img" alt="...">
         </a>
         <!-- User -->
         <ul class="nav align-items-center d-md-none">
@@ -51,11 +48,37 @@
             <li class="nav-item dropdown">
                 <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <div class="media align-items-center">
-              <span class="avatar avatar-sm rounded-circle">
-                <img alt="Image placeholder" src="./assets/img/theme/team-1-800x800.jpg">
-              </span>
+                                <span class="avatar avatar-sm rounded-circle">
+                                    <img alt="Image placeholder" src="../assets/img/theme/team-1-800x800.jpg">
+                                </span>
                     </div>
                 </a>
+                <div class="dropdown-menu dropdown-menu-arrow dropdown-menu-right">
+                    <div class=" dropdown-header noti-title">
+                        <h6 class="text-overflow m-0">Welcome!</h6>
+                    </div>
+                    <a href="../examples/profile.html" class="dropdown-item">
+                        <i class="ni ni-single-02"></i>
+                        <span>My profile</span>
+                    </a>
+                    <a href="../examples/profile.html" class="dropdown-item">
+                        <i class="ni ni-settings-gear-65"></i>
+                        <span>Settings</span>
+                    </a>
+                    <a href="../examples/profile.html" class="dropdown-item">
+                        <i class="ni ni-calendar-grid-58"></i>
+                        <span>Activity</span>
+                    </a>
+                    <a href="../examples/profile.html" class="dropdown-item">
+                        <i class="ni ni-support-16"></i>
+                        <span>Support</span>
+                    </a>
+                    <div class="dropdown-divider"></div>
+                    <a href="#!" class="dropdown-item">
+                        <i class="ni ni-user-run"></i>
+                        <span>Logout</span>
+                    </a>
+                </div>
             </li>
         </ul>
         <!-- Collapse -->
@@ -64,8 +87,8 @@
             <div class="navbar-collapse-header d-md-none">
                 <div class="row">
                     <div class="col-6 collapse-brand">
-                        <a href="./index.html">
-                            <img src="./assets/img/brand/blue.png">
+                        <a href="../index.html">
+                            <img src="../assets/img/brand/blue.png">
                         </a>
                     </div>
                     <div class="col-6 collapse-close">
@@ -155,17 +178,15 @@
         </div>
     </div>
 </nav>
+<!-- Main content -->
     @content
 <!-- Argon Scripts -->
 <!-- Core -->
-<script src="./assets/vendor/jquery/dist/jquery.min.js"></script>
-<script src="./assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Optional JS -->
-<script src="./assets/vendor/chart.js/dist/Chart.min.js"></script>
-<script src="./assets/vendor/chart.js/dist/Chart.extension.js"></script>
+<script src="../assets/vendor/jquery/dist/jquery.min.js"></script>
+<script src="../assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Argon JS -->
-<script src="./assets/js/argon.js?v=1.0.0"></script>
-<script src="./assets/js/search.js?v=1.0.0"></script>
+<script src="../assets/js/argon.js?v=1.0.0"></script>
 </body>
+
 
 </html>
