--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,163 +1,6 @@
 @import java.util.Date
 @(lastBlocks: List[Header], bestHeight: Int)
-
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
-    <meta name="author" content="Creative Tim">
-    <title>Encry Explorer</title>
-    <!-- Favicon -->
-    <link href="./assets/img/brand/favicon.png" rel="icon" type="image/png">
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-    <!-- Icons -->
-    <link href="./assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
-    <link href="./assets/vendor/fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
-    <!-- Argon CSS -->
-    <link type="text/css" href="./assets/css/argon.css?v=1.0.0" rel="stylesheet">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-        <!-- Roboto Webfont -->
-    <link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
-    <link type="text/css" href="./assets/css/search.css?v=1.0.0" rel="stylesheet">
-
-</head>
-
-<body>
-<!-- Sidenav -->
-<nav class="navbar navbar-vertical fixed-left navbar-expand-md navbar-light bg-white" id="sidenav-main">
-    <div class="container-fluid">
-        <!-- Toggler -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidenav-collapse-main" aria-controls="sidenav-main" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- Brand -->
-        <a class="navbar-brand pt-0" href="../">
-            <img src="./assets/img/brand/encry-logo.png" class="navbar-brand-img" alt="...">
-        </a>
-        <!-- User -->
-        <ul class="nav align-items-center d-md-none">
-            <li class="nav-item dropdown">
-                <a class="nav-link nav-link-icon" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="ni ni-bell-55"></i>
-                </a>
-                <div class="dropdown-menu dropdown-menu-arrow dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <div class="media align-items-center">
-              <span class="avatar avatar-sm rounded-circle">
-                <img alt="Image placeholder" src="./assets/img/theme/team-1-800x800.jpg">
-              </span>
-                    </div>
-                </a>
-            </li>
-        </ul>
-        <!-- Collapse -->
-        <div class="collapse navbar-collapse" id="sidenav-collapse-main">
-            <!-- Collapse header -->
-            <div class="navbar-collapse-header d-md-none">
-                <div class="row">
-                    <div class="col-6 collapse-brand">
-                        <a href="./index.html">
-                            <img src="./assets/img/brand/blue.png">
-                        </a>
-                    </div>
-                    <div class="col-6 collapse-close">
-                        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#sidenav-collapse-main" aria-controls="sidenav-main" aria-expanded="false" aria-label="Toggle sidenav">
-                            <span></span>
-                            <span></span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <!-- Form -->
-            <form class="mt-4 mb-3 d-md-none">
-                <div class="input-group input-group-rounded input-group-merge">
-                    <input type="search" class="form-control form-control-rounded form-control-prepended" placeholder="Search" aria-label="Search">
-                    <div class="input-group-prepend">
-                        <div class="input-group-text">
-                            <span class="fa fa-search"></span>
-                        </div>
-                    </div>
-                </div>
-            </form>
-            <!-- Navigation -->
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/transactions?page=0">
-                        <i class="ni ni-tv-2 text-primary"></i> Transactions
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/">
-                        <i class="ni ni-tv-2 text-primary"></i> Blocks
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/node">
-                        <i class="ni ni-tv-2 text-blue"></i> Nodes
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#search">
-                        <i class="ni ni-money-coins text-green"></i> Wallet
-                    </a>
-                </li>
-                <!--<li class="nav-item">-->
-                    <!--<a class="nav-link" href="./examples/icons.html">-->
-                        <!--<i class="ni ni-planet text-blue"></i> Icons-->
-                    <!--</a>-->
-                <!--</li>-->
-                <!--<li class="nav-item">-->
-                    <!--<a class="nav-link" href="./examples/maps.html">-->
-                        <!--<i class="ni ni-pin-3 text-orange"></i> Maps-->
-                    <!--</a>-->
-                <!--</li>-->
-                <!--<li class="nav-item">-->
-                    <!--<a class="nav-link" href="./examples/profile.html">-->
-                        <!--<i class="ni ni-single-02 text-yellow"></i> User profile-->
-                    <!--</a>-->
-                <!--</li>-->
-                <!--<li class="nav-item">-->
-                    <!--<a class="nav-link" href="./examples/tables.html">-->
-                        <!--<i class="ni ni-bullet-list-67 text-red"></i> Tables-->
-                    <!--</a>-->
-                <!--</li>-->
-                <!--<li class="nav-item">-->
-                    <!--<a class="nav-link" href="./examples/login.html">-->
-                        <!--<i class="ni ni-key-25 text-info"></i> Login-->
-                    <!--</a>-->
-                <!--</li>-->
-                <!--<li class="nav-item">-->
-                    <!--<a class="nav-link" href="./examples/register.html">-->
-                        <!--<i class="ni ni-circle-08 text-pink"></i> Register-->
-                    <!--</a>-->
-                <!--</li>-->
-            </ul>
-            <!-- Divider -->
-            <hr class="my-3">
-            <!-- Heading -->
-            <h6 class="navbar-heading text-muted">Links</h6>
-            <!-- Navigation -->
-            <ul class="navbar-nav mb-md-3">
-                <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/EncryFoundation">
-                        <i class="ni ni-spaceship"></i> Github
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<!-- Main content -->
+@main {
 <div class="main-content">
     <!-- Top navbar -->
     <nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
@@ -362,7 +205,7 @@
                                     @p.height
                                 </td>
                                 <td>
-                                    <a href="@routes.BlockController.getBlockView(p.id)" class="nav-link" target="_blank">
+                                    <a href="@routes.BlockController.getBlockView(p.id)" class="nav-link">
                                     @p.id</a>
                                 </td>
                                 <td>
@@ -412,16 +255,4 @@
         </footer>
     </div>
 </div>
-<!-- Argon Scripts -->
-<!-- Core -->
-<script src="./assets/vendor/jquery/dist/jquery.min.js"></script>
-<script src="./assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Optional JS -->
-<script src="./assets/vendor/chart.js/dist/Chart.min.js"></script>
-<script src="./assets/vendor/chart.js/dist/Chart.extension.js"></script>
-<!-- Argon JS -->
-<script src="./assets/js/argon.js?v=1.0.0"></script>
-<script src="./assets/js/search.js?v=1.0.0"></script>
-</body>
-
-</html>
+}
