github link open in new window

--- a/app/views/blockInfo.scala.html
+++ b/app/views/blockInfo.scala.html
@@ -189,7 +189,7 @@
                             @for(tx <- block.payload) {
                             <tr>
                                 <td>
-                                    <a href="@routes.TransactionsController.getTransaction(tx.id)" class="nav-link" target="_blank">
+                                    <a href="@routes.TransactionsController.getTransaction(tx.id)" class="nav-link">
                                         @tx.id</a>
                                 </td>
                                 <td>
