--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -147,7 +147,7 @@
             <!-- Navigation -->
             <ul class="navbar-nav mb-md-3">
                 <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/EncryFoundation">
+                    <a class="nav-link" href="https://github.com/EncryFoundation" target="_blank">
                         <i class="ni ni-spaceship"></i> Github
                     </a>
                 </li>
