actor create logs

--- a/app/views/transactions.scala.html
+++ b/app/views/transactions.scala.html
@@ -58,7 +58,7 @@
                             @for(tx <- txs) {
                             <tr>
                                 <td>
-                                    <a href="@routes.TransactionsController.getTransaction(tx.id)" class="nav-link" target="_blank">
+                                    <a href="@routes.TransactionsController.getTransaction(tx.id)" class="nav-link">
                                         @tx.id</a>
                                 </td>
                                 <td>
