Added list of transaction transfers

--- a/app/views/outputInfo.scala.html
+++ b/app/views/outputInfo.scala.html
@@ -286,7 +286,7 @@
                                                 </div>
                                             </th>
                                             <td>
-                                            @output.minerAddress
+                                            @output.address
                                             </td>
                                         </tr>
                                     </tbody>
