Output view refactoring

--- a/app/views/outputInfo.scala.html
+++ b/app/views/outputInfo.scala.html
@@ -281,12 +281,12 @@
                                             <th scope="row">
                                                 <div class="media align-items-center">
                                                     <div class="media-body">
-                                                        <span class="mb-0 text-sm">Miner Address</span>
+                                                        <span class="mb-0 text-sm">Active</span>
                                                     </div>
                                                 </div>
                                             </th>
                                             <td>
-                                            @output.minerAddress
+                                                @output.isActive
                                             </td>
                                         </tr>
                                     </tbody>
