--- a/app/views/transactionInfo.scala.html
+++ b/app/views/transactionInfo.scala.html
@@ -214,7 +214,7 @@
                                                 </div>
                                             </th>
                                             <td>
-                                            @tx.transaction.fee
+                                                @{tx.fee}
                                             </td>
                                         </tr>
                                         <tr>
@@ -332,7 +332,7 @@
                                             </td>
                                             <td>
                                                 <span class="badge badge-dot mr-4">
-                                                @output.value
+                                                @{(BigDecimal(output.value) / 100000000).toString()}
                                                 </span>
                                             </td>
                                             <td>
