Miner reward format fix

--- a/app/views/blockInfo.scala.html
+++ b/app/views/blockInfo.scala.html
@@ -326,7 +326,7 @@
                                                 </div>
                                             </th>
                                             <td>
-                                            @block.header.minerReward
+                                            @{(BigDecimal(block.header.minerReward) / 100000000)}
                                             </td>
                                         </tr>
                                     </tbody>
