Added address to output view

--- a/app/views/outputInfo.scala.html
+++ b/app/views/outputInfo.scala.html
@@ -288,6 +288,18 @@
                                             <th scope="row">
                                                 <div class="media align-items-center">
                                                     <div class="media-body">
+                                                        <span class="mb-0 text-sm">Address</span>
+                                                    </div>
+                                                </div>
+                                            </th>
+                                            <td>
+                                                @output.address
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">
+                                                <div class="media align-items-center">
+                                                    <div class="media-body">
                                                         <span class="mb-0 text-sm">Active</span>
                                                     </div>
                                                 </div>
